fix(popup) : fix z-index

--- a/style2.css
+++ b/style2.css
@@ -183,6 +183,7 @@ h2 {
 	top: 10%;
 	width:80%;
 	padding: 5px;
+	z-index: 1000;
 }
 
 .menu-button {
